--- a/LT.NET_project_cuoiki/Asset/css/main.css
+++ b/LT.NET_project_cuoiki/Asset/css/main.css
@@ -34,11 +34,27 @@ body {
     background: #151616;
 }
 
+#search_button {
+    padding: 10px 15px;
+    border: 1px solid #bc8247;
+    background: none;
+    color: #bc8247;
+    font-weight: bold;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all.3s;
+    margin-top: 20px;
+}
+
+    #search_button:hover {
+        transform: scale(0.9);
+        background: #bc8247;
+        color: #fff;
+    }
 /* Header page */
 .header_page {
     width: 80%;
     margin: 0 auto;
-
 }
 
 .header_page-main {
@@ -61,10 +77,10 @@ body {
     align-items: center;
 }
 
-.banner h1 {
-    font-size: 2.5rem;
-    font-weight: 500;
-}
+    .banner h1 {
+        font-size: 2.5rem;
+        font-weight: 500;
+    }
 
 .sticky {
     position: fixed;
@@ -75,11 +91,11 @@ body {
     z-index: 2;
 }
 
-.sticky .header_page-main {
-    width: 80%;
-    margin: 0 auto;
-    background: #fff;
-}
+    .sticky .header_page-main {
+        width: 80%;
+        margin: 0 auto;
+        background: #fff;
+    }
 
 .header_page-logo {
     height: 100px;
@@ -98,46 +114,46 @@ body {
     align-items: center;
 }
 
-.header_page-category-main-menu ul {
-    /* border: 1px solid #000; */
-}
+    .header_page-category-main-menu ul {
+        /* border: 1px solid #000; */
+    }
 
-.header_page-category-main-menu li {
-    cursor: pointer;
-    position: relative;
-    transition: all 0.3s;
-    font-weight: bold;
-}
+    .header_page-category-main-menu li {
+        cursor: pointer;
+        position: relative;
+        transition: all 0.3s;
+        font-weight: bold;
+    }
 
-.header_page-category-main-menu > li:hover {
-    color: #c0392b;
-}
+    .header_page-category-main-menu > li:hover {
+        color: #c0392b;
+    }
 
 
-.header_page-category-main-menu li > a {
-    transition: all 0.5s;
-    color: #000;
-    padding: 30px;
-}
+    .header_page-category-main-menu li > a {
+        transition: all 0.5s;
+        color: #000;
+        padding: 30px;
+    }
 
-.header_page-category-main-menu li:hover > a {
-    color: #c0392b;
-}
+    .header_page-category-main-menu li:hover > a {
+        color: #c0392b;
+    }
 
-.header_page-category-main-menu li i {
-    margin-left: 5px;
-    font-size: 12px;
-}
+    .header_page-category-main-menu li i {
+        margin-left: 5px;
+        font-size: 12px;
+    }
 
-.header_page-category-main-menu li:hover .header_page-category-sub-menu {
-    color: #000;
-    visibility: visible;
-    opacity: 1;
-}
+    .header_page-category-main-menu li:hover .header_page-category-sub-menu {
+        color: #000;
+        visibility: visible;
+        opacity: 1;
+    }
 
-.header_page-category-main-menu li:hover .header_page-category-sub-menu li {
-    font-weight: normal;
-}
+        .header_page-category-main-menu li:hover .header_page-category-sub-menu li {
+            font-weight: normal;
+        }
 
 .header_page-category-sub-menu {
     position: absolute;
@@ -151,24 +167,23 @@ body {
     transition: visibility 0s, opacity 0.3s linear;
 }
 
-.header_page-category-sub-menu li {
-    padding: 15px 0;
-    width: 200px;
-    font-size: 14px;
-    border-bottom: 1px solid #bc8247;
-    transition: all 0.3s;
-    font-weight: normal;
-}
+    .header_page-category-sub-menu li {
+        padding: 15px 0;
+        width: 200px;
+        font-size: 14px;
+        border-bottom: 1px solid #bc8247;
+        transition: all 0.3s;
+        font-weight: normal;
+    }
 
-.header_page-category-sub-menu li a {
-    transition: all 0.3s;
+        .header_page-category-sub-menu li a {
+            transition: all 0.3s;
+            color: #000;
+        }
 
-    color: #000;
-}
-
-.header_page-category-sub-menu li:hover {
-    transform: scale(0.9);
-}
+        .header_page-category-sub-menu li:hover {
+            transform: scale(0.9);
+        }
 
 /*  */
 
@@ -176,25 +191,25 @@ body {
     width: 30%;
 }
 
-.header_page-btns button {
-    background: none;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: all 0.4s;
-    border-radius: 10px;
-}
+    .header_page-btns button {
+        background: none;
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+        font-size: 14px;
+        transition: all 0.4s;
+        border-radius: 10px;
+    }
 
-.header_page-btns button a {
-    color: #000;
-    font-size: 14px;
-}
+        .header_page-btns button a {
+            color: #000;
+            font-size: 14px;
+        }
 
-.header_page-btns button i {
-    margin-right: 5px;
-    font-size: 14px;
-}
+        .header_page-btns button i {
+            margin-right: 5px;
+            font-size: 14px;
+        }
 
 /* Search modal */
 .header_page-modal-search {
@@ -242,20 +257,20 @@ body {
     margin: 0 auto;
 }
 
-.header_page-modal-search .main-modal-category ul {
-    display: flex;
-    justify-content: space-between;
-    font-size: 20px;
-    cursor: pointer;
-}
+    .header_page-modal-search .main-modal-category ul {
+        display: flex;
+        justify-content: space-between;
+        font-size: 20px;
+        cursor: pointer;
+    }
 
-.header_page-modal-search .main-modal-category ul li {
-    transition: 0.3s;
-}
+        .header_page-modal-search .main-modal-category ul li {
+            transition: 0.3s;
+        }
 
-.header_page-modal-search .main-modal-category ul li:hover {
-    color: #c0392b;
-}
+            .header_page-modal-search .main-modal-category ul li:hover {
+                color: #c0392b;
+            }
 
 .header_page-modal-search .main-modal-search {
     width: 70%;
@@ -264,21 +279,21 @@ body {
     margin-top: 20px;
 }
 
-.header_page-modal-search .main-modal-search input {
-    box-sizing: border-box;
-    width: 100%;
-    border: none;
-    padding: 10px;
-    box-shadow: 0px 1px 6px 0px #dadada;
-    outline: none;
-}
+    .header_page-modal-search .main-modal-search input {
+        box-sizing: border-box;
+        width: 100%;
+        border: none;
+        padding: 10px;
+        box-shadow: 0px 1px 6px 0px #dadada;
+        outline: none;
+    }
 
-.header_page-modal-search .main-modal-search i {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-}
+    .header_page-modal-search .main-modal-search i {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+    }
 
 /* Body page */
 .body_page {
@@ -295,16 +310,16 @@ body {
     background: #151616;
 }
 
-.footer_page h3 {
-    font-size: 18px;
-    text-transform: uppercase;
-    color: #fff;
-}
+    .footer_page h3 {
+        font-size: 18px;
+        text-transform: uppercase;
+        color: #fff;
+    }
 
-.footer_page ul li {
-    color: #95a5a6;
-    cursor: pointer;
-}
+    .footer_page ul li {
+        color: #95a5a6;
+        cursor: pointer;
+    }
 
 .footer_page-inforCompany,
 .footer_page-policy,
@@ -317,23 +332,23 @@ body {
     margin-right: 1%;
 }
 
-.footer_page-social ul {
-    display: flex;
-    justify-content: center;
-    /* margin-top: 20px; */
-    /* width: 19%; */
-    /* border: 1px solid #000; */
-}
+    .footer_page-social ul {
+        display: flex;
+        justify-content: center;
+        /* margin-top: 20px; */
+        /* width: 19%; */
+        /* border: 1px solid #000; */
+    }
 
-.footer_page-social ul li {
-    margin: 0 10px;
-    padding: 5px 15px;
-    border-radius: 4px;
-}
+        .footer_page-social ul li {
+            margin: 0 10px;
+            padding: 5px 15px;
+            border-radius: 4px;
+        }
 
-.footer_page-social ul li a {
-    color: #fff;
-}
+            .footer_page-social ul li a {
+                color: #fff;
+            }
 
 .facebook {
     background: #3B5998;
@@ -366,9 +381,9 @@ body {
         height: 200px;
     }
 
-    .banner h1 {
-        font-size: 20px;
-    }
+        .banner h1 {
+            font-size: 20px;
+        }
 
     .non-reponsive {
         display: none;
@@ -418,24 +433,24 @@ body {
         transform: translateY(-100%);
     }
 
-    .header_page-modal-search .main-modal-title h1 {
-        font-size: 20px;
-    }
+        .header_page-modal-search .main-modal-title h1 {
+            font-size: 20px;
+        }
 
-    .header_page-modal-search .main-modal-category {
-        width: 60%;
-    }
+        .header_page-modal-search .main-modal-category {
+            width: 60%;
+        }
 
-    .header_page-modal-search .main-modal-category ul {
-        display: none;
-    }
+            .header_page-modal-search .main-modal-category ul {
+                display: none;
+            }
 
-    .header_page-modal-search .main-modal-search {
-        width: 80%;
-        margin: 0 auto;
-        position: relative;
-        margin-top: 20px;
-    }
+        .header_page-modal-search .main-modal-search {
+            width: 80%;
+            margin: 0 auto;
+            position: relative;
+            margin-top: 20px;
+        }
 
     .footer_page {
         width: 100%;
@@ -514,8 +529,8 @@ body {
         align-items: center;
     }
 
-    .main-menu-title h1 {
-        /* font-weight: normal; */
-        font-size: 16px;
-    }
+        .main-menu-title h1 {
+            /* font-weight: normal; */
+            font-size: 16px;
+        }
 }
