--- a/LT.NET_project_cuoiki/Asset/css/productdetails.css
+++ b/LT.NET_project_cuoiki/Asset/css/productdetails.css
@@ -2,18 +2,21 @@ html a:hover {
     text-decoration: none !important;
 }
 
-.header_page{
+.header_page {
     background-color: #E4E4E4;
     width: 100%;
 }
-.header_page-main{
+
+.header_page-main {
     width: 80%;
     margin: 0 auto;
     background-color: #E4E4E4;
 }
-.header_page-category-main-menu{
+
+.header_page-category-main-menu {
     margin-bottom: 0;
 }
+
 .sticky {
     width: 100%;
     background: #fff;
@@ -24,35 +27,35 @@ html a:hover {
     background: #b2bec3;
 }
 
-.body_page-menu ul {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-}
+    .body_page-menu ul {
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+    }
 
-.body_page-menu ul li {
-    margin-right: 10px;
-}
+        .body_page-menu ul li {
+            margin-right: 10px;
+        }
 
-.body_page-menu span {
-    margin-right: 10px;
-}
+    .body_page-menu span {
+        margin-right: 10px;
+    }
 
-.body_page-menu ul li:first-child:hover a,
-.body_page-menu ul .second:hover a {
-    color: #bc8247;
-}
+    .body_page-menu ul li:first-child:hover a,
+    .body_page-menu ul .second:hover a {
+        color: #bc8247;
+    }
 
-.body_page-menu ul li a {
-    color: #000;
-    transition: all 0.2s;
-}
+    .body_page-menu ul li a {
+        color: #000;
+        transition: all 0.2s;
+    }
 
-.body_page-menu ul li a i {
-    margin-right: 3px;
-    font-size: 14px;
-}
+        .body_page-menu ul li a i {
+            margin-right: 3px;
+            font-size: 14px;
+        }
 
 /*.body_page-menu ul li:last-child a{*/
 /*    color: #a3a3a3;*/
@@ -73,13 +76,13 @@ html a:hover {
     justify-content: center;
 }
 
-.hover_container div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid #f5f5f5;
-    margin: 0 5px;
-}
+    .hover_container div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid #f5f5f5;
+        margin: 0 5px;
+    }
 
 .active {
     border-color: rgb(192, 192, 192) !important;
@@ -153,41 +156,45 @@ html a:hover {
     border-radius: 5px;
     padding: 5px 0;
 }
-.wrapper input{
-    width: 50px;
-    text-align: center;
-    border: none;
-    outline: none;
-}
 
-.wrapper span {
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 400;
-}
+    .wrapper input {
+        width: 50px;
+        text-align: center;
+        border: none;
+        outline: none;
+    }
 
-.wrapper .number {
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
-    border-left: 1px solid rgba(0, 0, 0, 0.1);
-}
+    .wrapper span {
+        width: 100%;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 400;
+    }
 
-.wrapper span.plus,
-.wrapper span.minus {
-    cursor: pointer;
-}
-.size_wrapper .select_size{
+    .wrapper .number {
+        border-right: 1px solid rgba(0, 0, 0, 0.1);
+        border-left: 1px solid rgba(0, 0, 0, 0.1);
+    }
+
+    .wrapper span.plus,
+    .wrapper span.minus {
+        cursor: pointer;
+    }
+
+.size_wrapper .select_size {
     padding: 8px 5px;
     border-radius: 10px;
 }
-#myBtn{
+
+#myBtn {
     border: none;
     background: none;
 }
-#myBtn span{
-    font-size: 18px;
-    color: #05a;
-}
+
+    #myBtn span {
+        font-size: 18px;
+        color: #05a;
+    }
 
 .modal {
     display: none;
@@ -219,29 +226,39 @@ html a:hover {
     text-align: right;
 }
 
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
 .btn-groups {
     margin-top: 25px;
 }
 
-.btn-groups button {
-    display: inline-block;
-    font-size: 16px;
-    text-transform: uppercase;
-    cursor: pointer;
-    padding: 14px 16px;
-    color: #fff;
-    transition: all 0.3s ease;
-}
+    .btn-groups button {
+        display: inline-block;
+        font-size: 16px;
+        text-transform: uppercase;
+        cursor: pointer;
+        padding: 14px 16px;
+        color: #fff;
+        transition: all 0.3s ease;
+    }
 
-.btn-groups button i {
-    margin-right: 8px;
-}
+        .btn-groups button a {
+            color: white;
+        }
+
+            .btn-groups button a:hover {
+                background-color: #fff;
+                color: #ff9f00;
+            }
+
+        .btn-groups button i {
+            margin-right: 8px;
+        }
 
 .add_cart_btn {
     background-color: #ff9f00;
@@ -249,20 +266,25 @@ html a:hover {
     margin-right: 8px;
 }
 
-.add_cart_btn:hover {
-    background-color: #fff;
-    color: #ff9f00;
-}
+    .add_cart_btn:hover, .add_cart_btn:hover a {
+        background-color: #fff;
+        color: #ff9f00;
+    }
 
 .buy_now_btn {
     background-color: #000;
     border: 2px solid #000;
 }
 
-.buy_now_btn:hover {
-    background-color: #fff;
-    color: #000;
-}
+    .buy_now_btn a {
+        color: #000;
+        text-decoration: none;
+    }
+
+    .buy_now_btn:hover, .buy_now_btn:hover a {
+        background-color: #fff;
+        color: #000;
+    }
 
 .tabs_area {
     background-color: #f8f8f8;
@@ -278,36 +300,36 @@ html a:hover {
     margin: 0 auto;
 }
 
-.nav-tabs li {
-    margin: 0 10px;
-}
+    .nav-tabs li {
+        margin: 0 10px;
+    }
 
-.nav-tabs li a {
-    display: block;
-    padding: 15px 30px;
-    position: relative;
-    font-size: 20px;
-    color: #a3a3a3;
-}
+        .nav-tabs li a {
+            display: block;
+            padding: 15px 30px;
+            position: relative;
+            font-size: 20px;
+            color: #a3a3a3;
+        }
 
-.nav-tabs li.active a {
-    color: #bc8247;
-}
+        .nav-tabs li.active a {
+            color: #bc8247;
+        }
 
-.nav-tabs li a:after {
-    content: "";
-    height: 2px;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    background: transparent;
-}
+        .nav-tabs li a:after {
+            content: "";
+            height: 2px;
+            width: 100%;
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            background: transparent;
+        }
 
-.nav-tabs li.active a:after,
-.nav-tabs li:hover a::after {
-    background: #bc8247;
-}
+        .nav-tabs li.active a:after,
+        .nav-tabs li:hover a::after {
+            background: #bc8247;
+        }
 
 #menu_1 {
     border-radius: 20px;
@@ -319,10 +341,10 @@ html a:hover {
     margin: 30px 0;
 }
 
-.tab-content-item p {
-    font-size: 18px;
-    color: #000;
-}
+    .tab-content-item p {
+        font-size: 18px;
+        color: #000;
+    }
 
 table {
     width: 100%;
@@ -331,7 +353,6 @@ table {
 .table-bordered td {
     text-align: left;
     padding: 15px;
-
 }
 
 .comment_list {
@@ -339,9 +360,9 @@ table {
     padding-bottom: 10px;
 }
 
-.comment_list li {
-    margin-bottom: 20px;
-}
+    .comment_list li {
+        margin-bottom: 20px;
+    }
 
 .review_mid .star_rating {
     color: #fe9727;
@@ -397,6 +418,7 @@ table {
 .related_products {
     margin-top: 40px;
 }
+
 .body_page-trending-product-list-card {
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 6px;
@@ -406,66 +428,73 @@ table {
     width: 240px;
     height: 350px;
 }
-.card-title-price a{
+
+.card-title-price a {
     color: #212529;
 }
-.card-title-price a:hover{
-    color: #bc8247;
-}
+
+    .card-title-price a:hover {
+        color: #bc8247;
+    }
+
 .body_page-trending-product-list-card .card-image {
     object-fit: cover;
     transition: all .3s;
 }
-.body_page-trending-product-list-card .card-image img{
-    height: 200px;
-    border-radius: 10px 10px 0 0;
-}
 
-.body_page-trending-product-list-card .card-image:hover {
-    transform: scale(0.8);
-}
+    .body_page-trending-product-list-card .card-image img {
+        height: 200px;
+        border-radius: 10px 10px 0 0;
+    }
+
+    .body_page-trending-product-list-card .card-image:hover {
+        transform: scale(0.8);
+    }
 
 .body_page-trending-product-list-card .card-title-price {
     padding: 10px;
     line-height: 1.5;
 }
 
-.body_page-trending-product-list-card .card-title-price p {
-    font-weight: 300;
-    margin-bottom: 0;
-}
+    .body_page-trending-product-list-card .card-title-price p {
+        font-weight: 300;
+        margin-bottom: 0;
+    }
 
-.body_page-trending-product-list-card .card-title-price span {
-    color: #e32124;
-    font-weight: bold;
-}
+    .body_page-trending-product-list-card .card-title-price span {
+        color: #e32124;
+        font-weight: bold;
+    }
+
 .body_page-trending-product-list-card .card-btn {
     padding: 0 0 10px 0;
 }
 
-.body_page-trending-product-list-card .card-btn button {
-    padding: 10px 15px;
-    border: 1px solid #bc8247;
-    background: none;
-    color: #bc8247;
-    font-weight: bold;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: all.3s;
-}
-.body_page-trending-product-list-card .card-btn button a {
-    color: #bc8247;
-    transition: all .3s;
-}
-.body_page-trending-product-list-card .card-btn button:hover a {
-    color: #fff;
-}
+    .body_page-trending-product-list-card .card-btn button {
+        padding: 10px 15px;
+        border: 1px solid #bc8247;
+        background: none;
+        color: #bc8247;
+        font-weight: bold;
+        border-radius: 6px;
+        cursor: pointer;
+        transition: all.3s;
+    }
 
-.body_page-trending-product-list-card .card-btn button:hover {
-    transform: scale(0.9);
-    background: #bc8247;
-    color: #fff;
-}
+        .body_page-trending-product-list-card .card-btn button a {
+            color: #bc8247;
+            transition: all .3s;
+        }
+
+        .body_page-trending-product-list-card .card-btn button:hover a {
+            color: #fff;
+        }
+
+        .body_page-trending-product-list-card .card-btn button:hover {
+            transform: scale(0.9);
+            background: #bc8247;
+            color: #fff;
+        }
 
 .related_products .box {
     align-self: center;
@@ -480,12 +509,14 @@ table {
     font-weight: 600;
     color: #fff;
 }
-.footer_page ul{
+
+.footer_page ul {
     margin-bottom: 0 !important;
 }
-.footer_page ul li {
-    color: #b4b3b3;
-}
+
+    .footer_page ul li {
+        color: #b4b3b3;
+    }
 
 /* responsive */
 @media screen and (max-width: 428px) {
@@ -507,10 +538,8 @@ table {
         justify-content: space-between;
     }
 
-    .btn-groups button {
-        font-size: 14px;
-        padding: 10px;
-    }
-
-    
+        .btn-groups button {
+            font-size: 14px;
+            padding: 10px;
+        }
 }
