--- a/LT.NET_project_cuoiki/Views/Shared/_MainLayout.cshtml
+++ b/LT.NET_project_cuoiki/Views/Shared/_MainLayout.cshtml
@@ -179,10 +179,20 @@
                         <li>Mặt dây chuyền</li>
                     </ul>
                 </div>
-                <div class="main-modal-search">
-                    <input type="text" placeholder="Tìm kiếm sản phẩm...">
+                <!--<div class="main-modal-search">
+                    <input type="text" name="searchkey" placeholder="Tìm kiếm sản phẩm...">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
+                    <input type=" submit" name=" submit" value="Tìm kiếm" class=" form-control" />
+                </div>-->
+                <form name="timkiem">
+                    <div class="form-group form-inline">
+                        <input placeholder="Tìm kiếm sản phẩm..." type="text" name="searchkey" class="form-control" />
+                        <input type="submit" name="submit" value="Tìm kiếm" class="form-control"/>
+                    </div>
+
+
+                </form>
+
             </div>
             <div class="hide-modal-search"></div>
 
